# chess-program-generator

./: .gitignore  README.md  pyproject.toml
chess_program_generator/: __init__.py  __main__.py  generator.py
src/: generator.py
