[tool.poetry]
name = "chess-program-generator"
version = "1.0.0"
description = "A program to generate a chess program. Since chess is such a complex game, it is impossible to write a program for it by hand."
authors = ["Miguel Guthridge <hdsq@outlook.com.au>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
chess = "^1.9.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
