[tool.poetry]
name = "chess-program-generator"
version = "1.0.1"
description = "A program to generate a chess program. Since chess is such a complex game, it is impossible to write a program for it by hand."
authors = ["Maddy Guthridge <hello@maddyguthridge.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chess_program_generator"}]

repository = "https://github.com/MaddyGuthridge/chess-program-generator"

keywords = [
    "chess",
    "generator",
    "cli",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
include = ["py.typed"]

[tool.poetry.urls]
"Online Documentation" = "https://github.com/MaddyGuthridge/chess-program-generator"
"Bug Tracker" = "https://github.com/MaddyGuthridge/chess-program-generator/issues"

[tool.poetry.scripts]
chess_program_generator = 'chess_program_generator:main'

[tool.poetry.dependencies]
python = "^3.9"
chess = "^1.9.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
